<resources>
    <string name="app_name">Mument_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom navi -->
    <string name="bottom_navi_home">홈</string>
    <string name="bottom_navi_record">기록하기</string>
    <string name="bottom_navi_locker">보관함</string>


    <string name="mument">뮤멘트</string>

    <string name="tag_is_first">처음</string>
    <string name="tag_has_heard">다시</string>


    // Impressive Tag
    <string name="impressive_tone">🎙   음색</string>
    <string name="impressive_beat">🥁   비트</string>
    <string name="impressive_lyrics">🖋   가사</string>
    <string name="impressive_melody">🎶   멜로디</string>
    <string name="impressive_base">🎉   베이스</string>
    <string name="impressive_intro">🛫   도입부</string>


    // Emotional Tag
    <string name="emotional_full">🎡   벅참</string>
    <string name="emotional_excited">😄   신남</string>
    <string name="emotional_flutter">💐   설렘</string>
    <string name="emotional_happy">😚   행복</string>
    <string name="emotional_confidence">🙌   자신감</string>
    <string name="emotional_consolation">👥   위로</string>
    <string name="emotional_blue">😔   우울</string>
    <string name="emotional_miss">🕰   그리움</string>
    <string name="emotional_loneliness">🛌   외로움</string>
    <string name="emotional_dim">⌛   아련함</string>
    <string name="emotional_calm">☕ ️ 차분</string>
    <string name="emotional_remembrance">💭   회상</string>
    <string name="emotional_relaxed">🍀   여유로움</string>
    <string name="emotional_romance">🌅   낭만</string>
    <string name="emotional_stress">🌋   스트레스</string>
    <string name="emotional_centimeter">🍁   센치함</string>

    <string name="locker_year">년</string>
    <string name="locker_month">월</string>

    <string name="mument_detail_dummy_strings">음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심</string>
    <string name="like_count_integer_format">%d명이 좋아합니다.</string>
    <string name="go_to_mument_history_integer_format">%d개의 뮤멘트가 있는 히스토리 보러가기</string>

    <!--filter-->
    <string name="locker_filter">필터</string>
    <string name="locker_impress_selection">인상적인 부분</string>
    <string name="locker_emotion">감정</string>
    <string name="locker_delete"><u>전체 해제</u></string>
    <string name="locker_apply_tag">태그 적용하기</string>
    <string name="locker_toast">태그는 최대 3개까지 선택할 수 있어요.</string>

    <!--    record view-->
    <string name="record_choose_title">곡을 선택해주세요.</string>
    <string name="record_search_hint">곡, 아티스트 검색</string>
    <string name="record_first_title">처음 들은 곡인가요?</string>
    <string name="record_first_listen">처음 들어요</string>
    <string name="record_second_listen">다시 들었어요</string>
    <string name="record_impression_title">무엇이 인상적이었나요?</string>
    <string name="record_choose_impression">감정을 선택해보세요.</string>
    <string name="record_write_title">이 순간의 여운을 글로 남겨보세요.</string>
    <string name="record_write_hint">글을 쓰지 않아도 뮤멘트를 저장할 수 있어요.</string>
    <string name="record_text_num">%d/1000</string>
    <string name="record_open">공개글</string>
    <string name="record_secret">비밀글</string>
    <string name="record_finish">완료</string>
    <string name="record_snackbar_tag_info">감상 태그는 최대 5개까지 선택할 수 있어요. </string>
    <string name="record_snackbar_first_info"> \'처음 들어요\'는 한 곡당 한 번만 설정할 수 있어요. </string>
    <string name="record_reset_header">뮤멘트 기록을 초기화하시겠어요?</string>
    <string name="record_reset_body">확인 선택 시, 작성 중인 내용이 삭제됩니다.</string>
    <string name="record_finish_record">🎉 뮤멘트가 작성되었어요!</string>

<!--    modify record view-->
    <string name="modify_record">뮤멘트가 수정되었어요.</string>
    <string name="modify_title">수정하기</string>
    <string name="modify_header">수정을 취소하시겠어요?</string>
    <string name="modify_body">확인 선택 시 변경사항이 저장되지 않습니다.</string>



    <string name="locker_like_empty_title">아직 좋아요한 뮤멘트가 없어요.</string>
    <string name="locker_like_empty_sub_title">좋아요를 눌러 마음에 든 뮤멘트를 언제든 꺼내보세요</string>
    <string name="locker_mument_empty_title">아직 기록한 뮤멘트가 없어요.</string>
    <string name="locker_mument_empty_sub_title">뮤멘트를 남겨 나만의 감상을 언제든 꺼내보세요.</string>
    <string name="locker_mument_empty_btn">뮤멘트 기록하기</string>

    <string name="search_record_empty_header">감상을 남기고 싶은 곡을 찾아보세요.</string>
    <string name="search_record_empty_body">아티스트,곡을 검색해보세요.</string>
    <string name="search_empty_header">좋아하는 곡에 대한 다양한 감상을 찾아보세요</string>
    <string name="search_empty_body">아티스트,곡을 검색해보세요.</string>
    <string name="search_result_empty_header">\'%s\'에 대한\n검색 결과가 없어요</string>
    <string name="search_result_empty_body">다른 검색어를 입력해보세요.</string>
    <string name="record_mument">뮤멘트 기록하기</string>
    <string name="muments_recorded_by_me">내가 기록한 뮤멘트</string>
    <string name="doesnt_exist_recorded_mument">아직 뮤멘트가 없어요.</string>
    <string name="write_earliest_mument">가장 먼저 뮤멘트를 남겨보세요.</string>
    <string name="write_first_mument">첫 뮤멘트를 남겨보세요.</string>
    <string name="show_my_history"><![CDATA[나의 히스토리 보기 >]]></string>
    <string name="every_mument">모든 뮤멘트</string>
    <string name="sort_latest">최신순</string>
    <string name="sort_like_count">좋아요순</string>

    <string name="filter_result_none_title">필터 검색 결과가 없어요.</string>
    <string name="filter_result_none_subtitle">선택한 필터를 변경해보세요.</string>

</resources>