<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mument_android.app.presentation.ui.locker.viewmodel.LockerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.presentation.ui.locker.MyMumentFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mument_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_locker_date" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_like_empty_title"
                style="@style/TextView.Mument_H3_B16.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locker_mument_empty_title"
                android:textColor="@color/mument_color_gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_like_empty_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/notosans_medium"
                android:text="@string/locker_mument_empty_sub_title"
                android:textColor="@color/mument_color_gray2"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_like_empty_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_empty_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_fill_purple_11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_like_empty_subtitle">

                <ImageView
                    android:id="@+id/iv_empty_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/record_icn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_empty_record"
                    style="@style/TextView.Mument_B7_M12.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locker_mument_empty_btn"
                    android:textColor="@color/mument_color_purple2"
                    android:textSize="12sp"
                    android:layout_marginEnd="49dp"
                    android:fontFamily="@font/notosans_bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_empty_record"
                    app:layout_constraintTop_toTopOf="@+id/iv_empty_record" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>